Grease pencil parented to object moving- Rotation problem #50081

Closed
opened 2016-11-19 17:17:22 +01:00 by dono dono · 8 comments

System Information
Windows 7 64 bits - Nvidia GTX 780

Blender Version
Broken: 2.78a

Short description of error
When a grease pencil stroke is parented to a cube, and you move the cube, the rotation of the strokes is not coherent anymore.

Exact steps for others to reproduce the error
1/ Add a cube
2/ Draw with Grease pencil on the cube with surface option
3/ Parent the strokes to the cube
4/ Move the cube
5/ Go to Edit Strokes mode
6/ Select all the strokes
7/ Rotate the strokes

The rotation is not coherent anymore. The strokes rotate around something like a median point between the cursor and the origin of the mesh. Right now it rotates around some abstract transformation in space.

Thanks !

**System Information** Windows 7 64 bits - Nvidia GTX 780 **Blender Version** Broken: 2.78a **Short description of error** When a grease pencil stroke is parented to a cube, and you move the cube, the rotation of the strokes is not coherent anymore. **Exact steps for others to reproduce the error** 1/ Add a cube 2/ Draw with Grease pencil on the cube with surface option 3/ Parent the strokes to the cube 4/ Move the cube 5/ Go to Edit Strokes mode 6/ Select all the strokes 7/ Rotate the strokes The rotation is not coherent anymore. The strokes rotate around something like a median point between the cursor and the origin of the mesh. Right now it rotates around some abstract transformation in space. Thanks !
Author

Changed status to: 'Open'

Changed status to: 'Open'
Author

Added subscriber: @ParrotDenis

Added subscriber: @ParrotDenis
Author
[bug.blend](https://archive.blender.org/developer/F403758/bug.blend)

Added subscriber: @antoniov

Added subscriber: @antoniov
Antonio Vazquez self-assigned this 2016-11-19 19:58:04 +01:00

I can confirm. I'm think I know what is the problem.

I can confirm. I'm think I know what is the problem.

This issue was referenced by dd82d70bc5

This issue was referenced by dd82d70bc5eade5dddd6d20ef81eb81ba43463da

Changed status from 'Open' to: 'Resolved'

Changed status from 'Open' to: 'Resolved'
Author

It works ! Thanks Antonio :)

It works ! Thanks Antonio :)
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
3 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#50081
No description provided.